--- a/background g.html
+++ b/background g.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="bgStyle.css">
 </head>
 <body id="body">
-	<h1></h1>
+	<h1>Cool background</h1>
 	<input type="color" id='color1' name="" value="#ffffff">
 	<input type="color" id='color2' name="" value="#ffffff">
 	<button id='b'>Radom</button>
