--- a/background g.html
+++ b/background g.html
@@ -8,6 +8,7 @@
 </head>
 <body id="body">
 	<h1>COOL background</h1>
+	<h2>Best of the Best Generator!</h2>
 	<input type="color" id='color1' name="" value="#ffffff">
 	<input type="color" id='color2' name="" value="#ffffff">
 	<button id='b'>Radom</button>
