--- a/background g.html
+++ b/background g.html
@@ -10,6 +10,7 @@
 	<h1>COOL background</h1>
 	<h2>Best of the Best Generator!</h2>
 	<h3>Latest title</h3>
+	<h4>last of the lastest title</h4>
 	<input type="color" id='color1' name="" value="#ffffff">
 	<input type="color" id='color2' name="" value="#ffffff">
 	<button id='b'>Radom</button>
